--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
         "jsonp": "^0.2.1",
         "better-scroll": "^0.1.15",
         "axios": "^0.17.1",
-        "qs": "^6.5.0"
+        "qs": "^6.5.0",
+        "vue-lazyload": "^1.1.4"
     },
     "devDependencies": {
         "autoprefixer": "^7.1.2",
         "babel-core": "^6.22.1",
-        "babel-loader": "^7.1.1",
+        "babel-loader": "^7.1.2",
         "babel-plugin-transform-runtime": "^6.22.0",
         "babel-preset-env": "^1.3.2",
         "babel-preset-stage-2": "^6.22.0",
