--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "dependencies": {
         "vue": "^2.5.2",
         "vue-router": "^3.0.1",
+        "vuex": "^3.0.1",
+        "vue-lazyload": "^1.1.4",
         "babel-runtime": "^6.26.0",
+        "create-keyframe-animation": "^0.1.0",
+        "js-base64": "^2.4.0",
+        "lyric-parser": "^1.0.1",
         "fastclick": "^1.0.6",
         "jsonp": "^0.2.1",
         "better-scroll": "^0.1.15",
         "axios": "^0.17.1",
-        "qs": "^6.5.0",
-        "vue-lazyload": "^1.1.4"
+        "good-storage": "^1.0.1"
     },
     "devDependencies": {
         "autoprefixer": "^7.1.2",
