--- a/package.json
+++ b/package.json
@@ -7,23 +7,22 @@
     "scripts": {
         "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
         "start": "npm run dev",
-
         "build": "node build/build.js"
     },
     "dependencies": {
-        "vue": "^2.5.2",
-        "vue-router": "^3.0.1",
-        "vuex": "^3.0.1",
-        "vue-lazyload": "^1.1.4",
+        "axios": "^0.19.0",
         "babel-runtime": "^6.26.0",
-        "create-keyframe-animation": "^0.1.0",
-        "js-base64": "^2.4.0",
-        "lyric-parser": "^1.0.1",
-        "fastclick": "^1.0.6",
-        "jsonp": "^0.2.1",
         "better-scroll": "^0.1.15",
-        "axios": "^0.17.1",
-        "good-storage": "^1.0.1"
+        "create-keyframe-animation": "^0.1.0",
+        "fastclick": "^1.0.6",
+        "good-storage": "^1.0.1",
+        "js-base64": "^2.4.0",
+        "jsonp": "^0.2.1",
+        "lyric-parser": "^1.0.1",
+        "vue": "^2.5.2",
+        "vue-lazyload": "^1.1.4",
+        "vue-router": "^3.0.1",
+        "vuex": "^3.0.1"
     },
     "devDependencies": {
         "autoprefixer": "^7.1.2",
